Fix mobile spacing

--- a/src/components/organisms/Prompt/styles/index.scss
+++ b/src/components/organisms/Prompt/styles/index.scss
@@ -22,7 +22,7 @@
     font-size: 1.8rem;
     line-height: 2.6rem;
     text-align: center;
-
+    margin-bottom: 2.4rem;
     @include bp(tablet) {
       text-align: left;
     }
@@ -34,6 +34,7 @@
     flex-flow: column nowrap;
     align-items: stretch;
     justify-content: center;
+    margin-bottom: 2.4rem;
     @include bp(tablet) {
       align-items: center;
     }
